added fields for Jaap's core and radius. UI not done.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,10 @@ add_executable(${PROJECT_NAME}_bin
         inc/slicing_plugin.h
         imguizmo/ImGuizmo.cpp
         imguizmo/ImGuizmo.h
-        src/JapSphere/jaapSphere.cpp
-        src/JapSphere/jaapSphere.h)
+        src/JaapSphere/jaapSphere.cpp
+        src/JaapSphere/jaapSphere.h
+        src/rotationAxis/rotationAxis.cpp
+        src/rotationAxis/rotationAxis.h
+        )
 
 target_link_libraries(${PROJECT_NAME}_bin igl::core igl::opengl_glfw igl::opengl_glfw_imgui)
